fix push/unshift ssr firestore onSnapshot

--- a/src/app/theme/global/grid.sass
+++ b/src/app/theme/global/grid.sass
@@ -1,3 +1,7 @@
 .grid
   display: grid
   gap: 1em
+
+.grid-column
+  @extend .grid
+  grid-auto-flow: column
